argocd-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd-rhtap-logging
  labels:
    argocd.argoproj.io/managed-by: gitops-service-argocd
---
