install-external-secrets-operator.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: external-secrets
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
