install-openshift-logging-operator.yaml
# https://docs.openshift.com/container-platform/4.13/logging/cluster-logging-deploying.html#cluster-logging-deploy-cli_cluster-logging-deploying

# Create a namespace for the OpenShift Elasticsearch Operator
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-operators-redhat 
  annotations:
    openshift.io/node-selector: ""
    argocd.argoproj.io/sync-wave: "-1"
  labels:
    openshift.io/cluster-monitoring: "true"
---

# Create a namespace for the Red Hat OpenShift Logging Operator
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-logging
  annotations:
    openshift.io/node-selector: ""  
    argocd.argoproj.io/sync-wave: "-1"
  labels:
    openshift.io/cluster-monitoring: "true"
