deploy-splunk.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: splunk
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: splunk
  namespace: splunk
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: splunk
    spec:
      serviceAccountName: splunk-sa
      containers:
      - name: splunk
        image: quay.io/srivickynesh/splunk-dev-image:splunk-dev-bundle
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "500m"
          limits:
            cpu: "1"
        ports:
        - containerPort: 8000 # WEB
        - containerPort: 8089 # API
        - containerPort: 8088 # HEC
        volumeMounts:
        - name: splunk-db-volume
          mountPath: /opt/splunk/var/lib/splunk/
      volumes:
      - name: splunk-db-volume
        persistentVolumeClaim:
          claimName: splunk-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: splunk
  namespace: splunk
spec:
  selector:
    app: splunk
  ports:
    - name: web
      port: 8000
    - name: api
      port: 8089
    - name: hec
      port: 8088
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: splunk-web
  namespace: splunk
  labels:
    app: splunk
spec:
  to:
    kind: Service
    name: splunk
  port:
    targetPort: 8000
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: splunk-api
  namespace: splunk
  labels:
    app: splunk
spec:
  to:
    kind: Service
    name: splunk
  port:
    targetPort: 8089
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: splunk-hec
  namespace: splunk
  labels:
    app: splunk
spec:
  to:
    kind: Service
    name: splunk
  port:
    targetPort: 8088
  wildcardPolicy: None
